-Carga de inventarios con opciones de Delimitador -Verificación de Encabezados en Archivo de Inventario -Verificación de Extensiones en carga de Inventario -Evitar Duplicidad de grupos de Inventario

--- a/app/Resources/views/vault/inventoryConfirm.html.twig
+++ b/app/Resources/views/vault/inventoryConfirm.html.twig
@@ -1,15 +1,19 @@
 {% extends 'admin/adminheader.html.twig' %}
 {% use "admin/menu.html.twig" %}
 {% block content %}
-    <div id="wrapper" class="fondo">
-        <div id="container">
-            <h3>Inventario Cargado</h3>
+<div id="wrapper" class="fondo">
+    <div id="container">
+{% if error %}
+    <div class="alert alert-danger">{{ error }}</div>
+{% else %}
+    <h3>Inventario Cargado</h3>
             <hr>
             <div class="bloque">
                 <div class="subtitulo">Se ha realizado la carga del inventario y se encuentra disponible para ser asignado.</div>
                 <hr>
             </div>
-        </div>
+{% endif %} 
     </div>
+</div>
 {% endblock %}
 
