--- a/app/Resources/views/vault/inventoryUpload.html.twig
+++ b/app/Resources/views/vault/inventoryUpload.html.twig
@@ -2,7 +2,7 @@
 {% use "admin/menu.html.twig" %}
 {% block content %}
 {% if error %}
-<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+<div class="alert alert-danger">{{ error }}</div>
 {% endif %}
 <div class="container-fluid">
     <h3>Carga de Inventarios</h3>
@@ -12,6 +12,8 @@
     <div class="form-group">
         {{ form_label(form.group, null, {'label': 'Nombre Inventario:','label_attr': {'class': 'form-label'} }) }}
         {{ form_widget(form.group, {'attr': {'class': 'form-control form-control-sm'} }) }}
+        {{ form_label(form.delimiter, null, {'label': 'Delimitador de Archivo:','label_attr': {'class': 'form-label'} }) }}
+        {{ form_widget(form.delimiter) }}
         {{ form_label(form.vault, null, {'label': 'Archivo CSV:','label_attr': {'class': 'form-label'} }) }}
         {{ form_widget(form.vault, {'attr': {'class': 'form-control form-control-sm'} }) }}
         {{ form_label(form.company, null, {'label': 'Empresa:','label_attr': {'class': 'form-label'} }) }}
