-Generacion de Graficos para Clientes con google graphs -Reporte Detallado para Clientes

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -12,6 +12,7 @@
             <script src="{{ asset('js/bootstrap/bootstrap.min.js') }}"></script>
             <script src="{{ asset('bundles/jquery-ui/jquery-ui.min.js') }}"></script>
             <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
             <!--<script src="{{ asset('bundles/datatables/dataTables.bootstrap.min.js') }}"></script>-->
         {% endblock %}
     </head>
