--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,4 +1,4 @@
-# app/Resources/TwigBundle/views/Exception/error404.html.twig #}
+{# app/Resources/TwigBundle/views/Exception/error404.html.twig #}
 {% extends 'base.html.twig' %}
 
 {% block body %}
