--- a/web/css/main.css
+++ b/web/css/main.css
@@ -206,7 +206,7 @@ custom-file-control:hover{
 
 .seleccion{
     min-height: 20px;
-    min-width: 256px;
+    width: 225px;
     color:white;
     text-align: center;
     background-color: #474747;
@@ -240,7 +240,7 @@ custom-file-control:hover{
     border: 1px solid #ccc;
     font-size: 0.75em;
     height: 34px;
-    width: 70%;
+    width: 225px;
     background-color: #FFF;
 }
 
@@ -311,6 +311,10 @@ custom-file-control:hover{
     border-color: #FF592B;
 }
 
+.btn-fluz-largo{
+    width:156px;
+}
+
 .btn-fluz:hover{
     color: #fff;
     cursor:pointer;
@@ -370,3 +374,66 @@ table.dataTable thead .sorting_desc {
     padding-right: 5px;
     padding-left: 5px;
 }
+
+.list-group{
+    float: right;
+}
+
+.list-group-item{
+    max-width: 350px;
+}
+
+.list-group-item span{
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 15px;
+}
+.material-switch > input[type="checkbox"] {
+    display: none;   
+}
+
+.material-switch > label {
+    cursor: pointer;
+    height: 0px;
+    position: relative; 
+    width: 40px;  
+}
+
+.material-switch > label::before {
+    background: rgb(0, 0, 0);
+    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    content: '';
+    height: 16px;
+    margin-top: -8px;
+    position:absolute;
+    opacity: 0.3;
+    transition: all 0.4s ease-in-out;
+    width: 40px;
+}
+.material-switch > label::after {
+    background: rgb(255, 255, 255);
+    border-radius: 16px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+    content: '';
+    height: 24px;
+    left: -4px;
+    margin-top: -8px;
+    position: absolute;
+    top: -4px;
+    transition: all 0.3s ease-in-out;
+    width: 24px;
+}
+.material-switch > input[type="checkbox"]:checked + label::before {
+    background: inherit;
+    opacity: 0.5;
+}
+.material-switch > input[type="checkbox"]:checked + label::after {
+    /*background: inherit;*/
+    background-color: #FF592B;
+    left: 20px;
+}
+
+.tcontainer{
+    overflow-x: scroll;
+}   
